@@ -22,7 +22,7 @@
 #ifndef CLAZY_CONTEXT_UTILS_H
 #define CLAZY_CONTEXT_UTILS_H
 
-#include "clazylib_export.h"
+#include "clazy_export.h"
 
 #include <clang/AST/DeclBase.h>
 #include <clang/AST/Decl.h>
