@@ -22,7 +22,7 @@
 
 #ifndef CLAZY_FIXIT_UTILS_H
 #define CLAZY_FIXIT_UTILS_H
-#include "clazylib_export.h"
+#include "clazy_export.h"
 #include <clang/Parse/Parser.h>
 
 #include <string>
