@@ -22,7 +22,7 @@
 #ifndef CLAZY_MACRO_UTILS_H
 #define CLAZY_MACRO_UTILS_H
 
-#include "clazylib_export.h"
+#include "clazy_export.h"
 #include "clazy_stl.h"
 
 #include <clang/Frontend/CompilerInstance.h>
