@@ -1,0 +1,10 @@
+#ifndef CLAZY_EXPORT_H
+#define CLAZY_EXPORT_H
+
+#ifdef CLAZY_BUILD_UTILS_LIB
+# include "clazylib_export.h" // Include the export header generated by CMake
+#else
+# define CLAZYLIB_EXPORT // We aren't using the lib, don't export
+#endif
+
+#endif
