@@ -25,5 +25,12 @@
 
 
 * v1.2 ()
+  - clazylib.so no longer gets built by default, only the plugin (ClangLazy.so)
+    gets built. Pass -DCLAZY_BUILD_UTILS_LIB=ON to enable the utils library if
+    you're developing tools using clazy's convenience functions, which you're
+    probably not.
+  - CLAZY_INSTALL_NO_HEADERS option was removed. Either install the utils library
+    and headers or nothing at all. By default nothing is installed, except
+    the plugin and man pages.
   - New checks:
     install-event-filter
